fixed some suspicious codes noticed from FindBugs. * made innner classes static * use Arrays.toString() instead of invoking toString() of [] * replaced new Long() by Long.valueOf() by performance reason